- Analyze page: fixed a graphical issue (top borders visible in hidden cells under the "Translate" buttons); - Cattool: shortcut text in the "confirm translation" warning has been made OS dependent ('CMD' in Mac, 'Ctrl' in the others); - Cattool: if a tag is selected in the editarea and the user press the left or right button the cursor moves correctly at the side of the tag; - Manage page: double clicking the project name or project id does not select above text anymore.

--- a/public/css/fieldtest.css
+++ b/public/css/fieldtest.css
@@ -59,9 +59,12 @@ body.manage th.header
 
 body.manage .head
 	{
-	float: left;
+/*
+        float: left;
 	width: 100%;
-	margin-bottom: 8px;
+*/
+display: block;	
+margin-bottom: 8px;
 	}
 
 body.manage th
@@ -578,9 +581,11 @@ body.manage .article.msg
 
 body.manage .project-details
 	{
+	display: block;
+/*    
 	width: 100%;
-	display: inline;
 	height: 30px;
+*/
 	}
 body.manage .id-project
 	{
